# total-maps

./: CHANGELOG.md  README.md  total-maps.cabal
src/Data/Total/: Array.hs  Map.hs  Subset.hs
src/Data/Total/Array/: Subset.hs
src/Data/Total/Internal/: SparseFold.hs
src/Data/Total/Map/: Sparse.hs  Subset.hs
